--- a/flavors/midnight-catppuccin-macchiato.theme.css
+++ b/flavors/midnight-catppuccin-macchiato.theme.css
@@ -17,10 +17,10 @@
 /* customize things here */
 :root {
 	/* font, change to 'gg sans' for default discord font*/
-	--font: 'figtree';
+	--font: 'gg sans';
 
 	/* top left corner text */
-	--corner-text: 'Catppuccin';
+	--corner-text: 'karreed';
 
 	/* thickness of messages divider */
 	--divider-thickness: 3px;
