--- a/flavors/midnight-catppuccin-macchiato.theme.css
+++ b/flavors/midnight-catppuccin-macchiato.theme.css
@@ -79,7 +79,7 @@
 	/* change to block to show, none to hide */
 	--discord-icon: none; /* discord icon */
 	--moon-icon: block; /* moon icon */
-	--moon-icon-url: none; /* custom icon url */
+	--moon-icon-url: url('https://upload.wikimedia.org/wikipedia/commons/c/c4/Font_Awesome_5_solid_moon.svg'); /* custom icon url */
 	--moon-icon-size: auto;
 
 	/* filter uncolorable elements to fit theme */
