--- a/flavors/midnight-catppuccin-macchiato.theme.css
+++ b/flavors/midnight-catppuccin-macchiato.theme.css
@@ -78,8 +78,8 @@
 	/* direct messages moon icon */
 	/* change to block to show, none to hide */
 	--discord-icon: none; /* discord icon */
-	--moon-icon: block; /* moon icon */
-	--moon-icon-url: url('https://upload.wikimedia.org/wikipedia/commons/c/c4/Font_Awesome_5_solid_moon.svg'); /* custom icon url */
+	--moon-icon: none; /* moon icon */
+	--moon-icon-url: none; /* custom icon url */
 	--moon-icon-size: auto;
 
 	/* filter uncolorable elements to fit theme */
@@ -95,9 +95,9 @@
 }
 
 /* catppuccin icon */
-/*.childWrapper__6e9f8:has(> svg:not(.favoriteIcon_dcc7a4)) {
+.childWrapper__6e9f8:has(> svg:not(.favoriteIcon_dcc7a4)) {
 	background-image: url('https://pbs.twimg.com/media/GiNdmGJakAA1SQQ?format=jpg&name=large');
 	background-size: cover;
 	background-position: top;
-*/
+
 }
